# serializer version: 1
# name: test_all_entities[binary_sensor.test_blanco_unit_ble_connection-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.test_blanco_unit_ble_connection',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'BLE Connection',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': 'mdi:bluetooth-connect',
    'original_name': 'BLE Connection',
    'platform': 'blanco_unit',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'connection',
    'unique_id': 'connection',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.test_blanco_unit_ble_connection-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'connectivity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Blanco Unit BLE Connection',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:bluetooth-connect',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_blanco_unit_ble_connection',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[binary_sensor.test_blanco_unit_cloud_connection-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.test_blanco_unit_cloud_connection',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cloud Connection',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': 'mdi:cloud',
    'original_name': 'Cloud Connection',
    'platform': 'blanco_unit',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cloud_connection',
    'unique_id': 'cloud_connection',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.test_blanco_unit_cloud_connection-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'connectivity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Blanco Unit Cloud Connection',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:cloud',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_blanco_unit_cloud_connection',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[binary_sensor.test_blanco_unit_firmware_update_available-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.test_blanco_unit_firmware_update_available',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Firmware Update Available',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.UPDATE: 'update'>,
    'original_icon': 'mdi:update',
    'original_name': 'Firmware Update Available',
    'platform': 'blanco_unit',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'firmware_update',
    'unique_id': 'firmware_update',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.test_blanco_unit_firmware_update_available-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'update',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Blanco Unit Firmware Update Available',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:update',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_blanco_unit_firmware_update_available',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[binary_sensor.test_blanco_unit_water_dispensing-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.test_blanco_unit_water_dispensing',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Water Dispensing',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:water-pump',
    'original_name': 'Water Dispensing',
    'platform': 'blanco_unit',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'water_dispensing',
    'unique_id': 'water_dispensing',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.test_blanco_unit_water_dispensing-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Blanco Unit Water Dispensing',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:water-pump',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_blanco_unit_water_dispensing',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
